--- a/Lost/Assembly-CSharp.csproj
+++ b/Lost/Assembly-CSharp.csproj
@@ -56,8 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
+    <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
-    <Compile Include="Assets\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\FireManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
